--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,8 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.5);
+    /*filter: sepia(20%) grayscale(50%);*/
 }
 
 .header {
@@ -12,7 +14,8 @@
     justify-content: space-between;
     height: 20rem;
     padding: 1rem;
-    background-color: aquamarine;
+    /*background-color: aquamarine;*/
+    box-shadow:0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .photoWrap {
@@ -210,6 +213,7 @@
     .header {
         height: 10rem;
         gap: 0;
+        padding: 1rem;
     }
 
     .mainTitleName {
@@ -227,7 +231,7 @@
 
     .mainContainer {
         gap: .1rem;
-        padding: 0rem .2rem 0rem;
+        padding: 0rem 1rem 0rem;
     }
 
     .mainContentLeft {
