--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,7 +15,7 @@
     height: 20rem;
     padding: 1rem;
     /*background-color: aquamarine;*/
-    box-shadow:0 4px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .photoWrap {
@@ -36,14 +36,13 @@
 .headerContent {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 .mainTitle {
-    display: flex;
-    flex-direction: column;
     letter-spacing: .5rem;
-    margin-bottom: auto;
-}
+     margin-bottom: 2rem;
+   }
 
 .mainTitleName {
     font-size: 3rem;
@@ -55,8 +54,37 @@
     font-size: 2rem;
     font-weight: 700;
     text-transform: uppercase;
+    text-align: end;
 }
 
+
+.changeLanguageButtonBlock {
+    display: flex;
+    gap: 1rem;
+    align-self: end;
+    margin-bottom: auto;
+}
+
+.changeLanguageButton{
+    padding: .5rem 1rem;
+    background: transparent;
+    box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.5);
+    border: none;
+    font-weight: 700;
+    transition: all .5s linear;
+    }
+
+.changeLanguageBlock button:hover{
+    box-shadow: inset 0 0 10px 2px rgb(89 97 142 / 50%);
+}
+
+.changeLanguageButtonBlockPrint{
+    display: none;
+}
+
+.active{
+    box-shadow: inset 0px 1px 20px 10px rgb(89 97 142 / 50%);
+}
 /*main*/
 
 .mainContainer {
@@ -193,10 +221,17 @@
 
 }
 
-@media only screen and (max-width: 380px) {
-    .header {
-        height: 11rem;
+@media only screen and (max-width: 440px) {
+    .mainTitleName {
+        font-size: 1.5rem;
     }
+
+    .mainTitleProfession {
+        font-size: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 380px) {
 
     .mainTitleName {
         font-size: 1.5rem;
@@ -213,12 +248,16 @@
     .header {
         height: 10rem;
         gap: 0;
-        padding: 1rem;
+        padding: .5rem 1rem;
+    }
+
+    .mainTitle {
+           margin-bottom: auto;
     }
 
     .mainTitleName {
         font-size: 2rem;
-        margin-bottom: 1rem;
+        margin-bottom: .5rem;
     }
 
     .mainTitleProfession {
@@ -229,9 +268,24 @@
         width: 10rem;
     }
 
+    .changeLanguageButtonBlockPrint{
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        align-self: flex-end;
+    }
+
+    .changeLanguageButtonBlock {
+       display: none;
+    }
+
+    .changeLanguageButton{
+        padding: .2rem .5rem;
+    }
+
     .mainContainer {
         gap: .1rem;
-        padding: 0rem 1rem 0rem;
+        padding: 0rem .5rem 0rem 1rem;
     }
 
     .mainContentLeft {
@@ -248,7 +302,7 @@
     }
 
     .QrCode {
-        width: 10rem;
+        width: 8rem;
     }
 
     .skillsList {
@@ -263,6 +317,7 @@
         margin-bottom: .2rem;
     }
 }
+
 
 
 
