--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@ a {
     transition: all .5s linear;
 }
 
+button{
+    cursor: pointer;
+    transition: all .5s linear;
+}
+
 h2 {
     font-weight: 900;
     font-size: 2rem;
