--- a/src/App.module.css
+++ b/src/App.module.css
@@ -41,8 +41,8 @@
 
 .mainTitle {
     letter-spacing: .5rem;
-     margin-bottom: 2rem;
-   }
+    margin-bottom: 2rem;
+}
 
 .mainTitleName {
     font-size: 3rem;
@@ -65,26 +65,27 @@
     margin-bottom: auto;
 }
 
-.changeLanguageButton{
+.changeLanguageButton {
     padding: .5rem 1rem;
     background: transparent;
     box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.5);
     border: none;
     font-weight: 700;
     transition: all .5s linear;
-    }
-
-.changeLanguageBlock button:hover{
-    box-shadow: inset 0 0 10px 2px rgb(89 97 142 / 50%);
 }
 
-.changeLanguageButtonBlockPrint{
+.changeLanguageButton:hover {
+    box-shadow: inset 0px 1px 20px 10px rgb(89 97 142 / 50%);
+}
+
+.changeLanguageButtonBlockPrint {
     display: none;
 }
 
-.active{
+.active {
     box-shadow: inset 0px 1px 20px 10px rgb(89 97 142 / 50%);
 }
+
 /*main*/
 
 .mainContainer {
@@ -252,7 +253,7 @@
     }
 
     .mainTitle {
-           margin-bottom: auto;
+        margin-bottom: auto;
     }
 
     .mainTitleName {
@@ -268,7 +269,7 @@
         width: 10rem;
     }
 
-    .changeLanguageButtonBlockPrint{
+    .changeLanguageButtonBlockPrint {
         display: flex;
         flex-direction: column;
         gap: .5rem;
@@ -276,11 +277,11 @@
     }
 
     .changeLanguageButtonBlock {
-       display: none;
+        display: none;
     }
 
-    .changeLanguageButton{
-        padding: .2rem .5rem;
+    .changeLanguageButton {
+        padding: .5rem;
     }
 
     .mainContainer {
