--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     gap: 1.5rem;
+    width: 100%;
+    justify-content: flex-end;
 }
 
 .contactsListItemIcons,
@@ -46,18 +48,33 @@
     .contactsListItemLink span {
         display: none;
     }
+
+    .iconsTel{
+        margin-right: 0;
+    }
+
     .contactsList{
         justify-content: space-between;
     }
 }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 525px) {
     .contactsListItemIcons,
     .contactsListItemIcon{
         width: 2rem;
         height: 2rem;
     }
 }
+
+@media only screen and (max-width: 430px) {
+    .contactsList{
+        display: flex;
+        align-items: center;
+        gap: 0;
+        justify-content: space-between;
+    }
+}
+
 
 /*print*/
 
