changed button for print

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -61,6 +61,7 @@
 
 .changeLanguageButtonBlock {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
     align-self: end;
     margin-bottom: auto;
