--- a/src/App.module.css
+++ b/src/App.module.css
@@ -61,7 +61,6 @@
 
 .changeLanguageButtonBlock {
     display: flex;
-    flex-wrap: wrap;
     gap: 1rem;
     align-self: end;
     margin-bottom: auto;
@@ -248,6 +247,19 @@
 @media only screen and (max-width: 318px){
     .header{
         height: 18rem;
+    }
+
+    .changeLanguageButtonBlock {
+        gap: .5rem;
+    }
+
+    .changeLanguageButton {
+        padding: .5rem 1rem;
+        background: transparent;
+        box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.5);
+        border: none;
+        font-weight: 700;
+        transition: all .5s linear;
     }
 }
 
